# ugreen-nas-cli

./: .gitignore  LICENSE  README.md
.github/workflows/: test.yml
agent-harness/: AI_AGENT_USAGE.md  README.md  UGREEN_NAS.md  config.example.toml  setup.py
agent-harness/cli_anything/ugreen_nas/: _cli.py
agent-harness/cli_anything/ugreen_nas/core/: __init__.py  audit.py  config.py  paths.py  webdav.py
agent-harness/cli_anything/ugreen_nas/tests/: TEST.md  test_cli_webdav.py  test_paths.py
agent-harness/scripts/: install.sh  setup-profile-macos-keychain.sh
docs/: optimization-checklist.md  team-onboarding.md
nas-kb/: .gitignore  README.md  pyproject.toml
nas-kb/config/: team-sync.example.toml
nas-kb/docs/: team-architecture.md
nas-kb/nas_kb/: __init__.py  cli.py
nas-kb/scripts/: install.sh
nas-kb/tests/: test_nas_kb.py
scripts/: install-codex-skill.py
skills/cli-anything-ugreen-nas/: SKILL.md
skills/cli-anything-ugreen-nas/agents/: openai.yaml
skills/nas-knowledge-base/: SKILL.md
skills/nas-knowledge-base/agents/: openai.yaml
tests/: test_install_scripts.py
