[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nas-kb"
version = "0.1.0"
description = "Incremental UGREEN NAS knowledge indexing through EverOS"
requires-python = ">=3.11"

[project.scripts]
nas-kb = "nas_kb.cli:main"

[tool.setuptools.packages.find]
include = ["nas_kb*"]
